--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
          font-size: 40px;
          font-weight:400;
        }
-       
+        @media  (max-width:450px){
+        .carousel-item img{
+               width: 100%;
+               height:40vh;
+        }
+      } 
        
     </style>
 </head>
