--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
          font-size: 40px;
          font-weight:400;
        }
+        .contact{
+         width: 600px;
+       }
         @media  (max-width:450px){
         .carousel-item img{
                width: 100%;
                height:40vh;
         }
+            .contact{
+         width: 320px;
+       }
       } 
        
     </style>
@@ -288,7 +294,7 @@
   <hr class="w-25 m-auto">
   </div>
 
-  <div class="w-50 m-auto">
+  <div class="contact m-auto">
   <form action="userinfo.php" method="POST">
 <div class="form-group my-3">
   <label >Username</label>
