--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-capitalize" href="#about_us"  >About us</a>
+                <a class="nav-link text-capitalize" href="#about_us"  >About Us</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-capitalize" href="#gallery"  >Gallery</a>
